--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,22 @@ aside {
 .sorrDet {
   grid-area: 6 / 1 / 8 / 9;
 }
+/* Loader styling */
+.loader {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #000000;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  display: none;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
